# reve-os

./: .env.example  .gitignore  .replit  CLAUDE.md  README.md  VPS-SETUP-LOG.md  WEBHOOK-OS-GUIDE.md  index.js  package-lock.json  package.json  pyproject.toml  qualify-companies.md
.claude/rules/: backend.md  frontend.md  skills.md
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
.superset/: config.json  context-assembly-improvements.md
_our-refinements/: SPEC.md  gtmexplanation.md
_system/knowledge_graph/: ontology.yaml  taxonomy.yaml
app/: config.py  main.py
app/core/: agent_executor.py  atomic_writer.py  batch_optimizer.py  cache.py  channel_orchestrator.py  channel_proxy.py  channel_store.py  claude_executor.py  cleanup_worker.py  company_cache.py  consolidated_runner.py  context_analytics.py  context_assembler.py  context_filter.py  context_index.py  context_providers.py  context_rack.py  context_store.py  dataset_store.py  deepline_executor.py  destination_store.py  drive_sync.py  email_bridge.py  email_notifier.py  enrichment_cache.py  entity_utils.py  event_bus.py  execution_history.py  experiment_store.py  feedback_loop.py  feedback_store.py  (+36 more)
clients/: _template.md  hologram.md  twelve-labs.md
dashboard/: DESIGN_PROMPT.md  package-lock.json  package.json
docs/: api-reference.md  architecture.md  clay-setup.md  plan-gtm-study-guide.md  skills-guide.md
pipelines/: account-research.yaml  competitive-deal.yaml  competitive-displacement.yaml  fivefox-outbound.yaml  linkedin-connect.yaml  linkedin-outreach.yaml  meeting-prep-suite.yaml  outbound-email.yaml  outbound-sequence.yaml  post-meeting-followup.yaml  signal-enriched-outbound.yaml
plays/: account-research.yaml  cold-outbound.yaml  competitive-displacement.yaml  linkedin-outreach.yaml  meeting-prep-suite.yaml  post-meeting-follow-up.yaml
scripts/: clay-run.py  deepline-find.py  fathom_account_brief.py  fathom_study_guide.py  hologram_enrich.py  inbox-triage.py  install-clay-daemon.sh  install-daemon.sh  migrate_context_to_supabase.py  nab_people_search.py  newsletter-digest.py  serper_cw_enrichment.py  serper_cw_retry.py  test_qualifier.py  test_signal_researcher.py  uninstall-clay-daemon.sh  webhook-os-mcp-server.py
table_templates/: cold_outbound_generic.yaml  hologram_outbound_sequence.yaml  twelve_labs_account_qualification.yaml
tests/: test_agent_executor.py  test_atomic_writer.py  test_cache.py  test_channel_orchestrator.py  test_channel_store.py  test_claude_executor.py  test_cleanup_worker.py  test_config.py  test_context_assembler.py  test_context_index.py  test_context_index_vector.py  test_context_rack.py  test_context_store.py  test_domain_analyzer.py  test_drive_sync.py  test_execution_history.py  test_job_queue.py  test_main_startup.py  test_memory_store.py  test_models_feedback.py  test_models_requests.py  test_models_signals.py  test_models_webhook.py  test_pipeline_runner.py  test_prefetch.py  test_research_fetcher.py  test_router_channels.py  test_router_destinations.py  test_router_health.py  test_router_webhook.py  test_sheets_client.py  test_skill_company_qualifier.py  test_skill_loader.py  test_sumble_prefetcher.py  test_team_router.py  test_telemetry.py  test_worker_pool.py
(+540 files in other folders)
