[project]
name = "clay-webhook-os"
version = "1.0.0"
description = "Clay Webhook OS — AI-powered webhook server for Clay HTTP Actions"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",
    "pyyaml>=6.0.2",
    "httpx>=0.28.0",
    "aiohttp>=3.9.0",
    "parallel-web>=0.4.0",
    "supabase>=2.0.0",
    "PyJWT>=2.8.0",
    "slowapi>=0.1.9",
    "tenacity>=9.0.0",
    "Jinja2>=3.1.0",
]

[project.optional-dependencies]
dev = [
    "httpx>=0.28.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
]
# LLM observability via Arize Phoenix (self-hosted, pure-Python — no Docker).
# Enable with PHOENIX_ENABLED=1 at runtime after `pip install -e .[telemetry]`,
# then run `phoenix serve` (or any local Phoenix instance) on :6006.
telemetry = [
    "arize-phoenix>=5.0.0",
    "arize-phoenix-otel>=0.9.0",
    "openinference-semantic-conventions>=0.1.14",
    "opentelemetry-api>=1.27.0",
    "opentelemetry-sdk>=1.27.0",
    "opentelemetry-exporter-otlp>=1.27.0",
]
# Semantic context retrieval via sqlite-vec + FastEmbed (CPU-only, embedded).
# Falls back to TF-IDF if these packages aren't installed.
vector = [
    "sqlite-vec>=0.1.6",
    "fastembed>=0.4.0",
]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501"]

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"
